--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@electron-forge/maker-squirrel": "^6.0.5",
     "@electron-forge/maker-zip": "^6.0.5",
     "@electron-forge/plugin-webpack": "^6.0.5",
+    "@electron-forge/publisher-github": "^6.0.5",
     "@tabler/icons-react": "^2.7.0",
     "@types/eventsource": "^1.1.11",
     "@types/jest": "^29.4.0",
@@ -69,6 +70,7 @@
     "@types/uuid": "^9.0.1",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "electron-log": "^5.0.0-beta.16",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.1.0",
     "eventsource": "^2.0.2",
@@ -81,6 +83,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "sequelize": "^6.29.1",
     "tunnel": "^0.0.6",
+    "update-electron-app": "^2.0.1",
     "uuid": "^9.0.0"
   }
 }
