🛠️ Refactor: Modify styles and configurations and upgrade to v0.0.2-alpha

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": ".webpack/main",
   "licenses": "GPL-3.0",
   "description": "ChatEase Desktop App",
+  "repository": "https://github.com/gyuannn/ChatEase",
   "scripts": {
     "start": "electron-forge start",
     "tailwindcss": "tailwindcss -i ./src/index.css -o ./src/tailwind.css --watch",
