--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
     "css-loader": "^6.0.0",
     "electron": "23.1.1",
     "electron-builder": "^23.6.0",
