--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.11",
     "@types/tunnel": "^0.0.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -79,6 +80,7 @@
     "gpt-3-encoder": "^1.1.4",
     "highlight.js": "^11.7.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.5",
     "react-redux": "^8.0.5",
