--- a/package.json
+++ b/package.json
@@ -79,9 +79,13 @@
     "eventsource": "^2.0.2",
     "gpt-3-encoder": "^1.1.4",
     "highlight.js": "^11.7.0",
+    "i18next": "^22.4.13",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
     "react-markdown": "^8.0.5",
     "react-redux": "^8.0.5",
     "react-syntax-highlighter": "^15.5.0",
