Feat: Share chat messages' image to clipboard.

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eventsource": "^2.0.2",
     "gpt-3-encoder": "^1.1.4",
     "highlight.js": "^11.7.0",
+    "html2canvas": "^1.4.1",
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
