--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chatease",
-  "productName": "ChatEase(Dev)",
-  "version": "0.1.0",
+  "productName": "ChatEase",
+  "version": "0.0.1",
   "main": ".webpack/main",
   "licenses": "GPL-3.0",
   "description": "ChatEase Desktop App",
