--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@electron-forge/maker-zip": "^6.1.1",
     "@electron-forge/plugin-webpack": "^6.0.5",
     "@electron-forge/publisher-github": "^6.0.5",
+    "@electron/universal": "^1.3.4",
     "@tabler/icons-react": "^2.7.0",
     "@types/eventsource": "^1.1.11",
     "@types/jest": "^29.4.0",
