workflow: release action updated

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,12 @@
 name: Publish Release
 
 on:
-  push:
+  pull-request:
+    types: [closed]
     branches:
       - main
+    conditions:
+      - ${{ github.event.pull_request.merged == true }}
 
 jobs:
   build:
