--- a/.github/workflows/preReleaseCheck.yml
+++ b/.github/workflows/preReleaseCheck.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Install Dependency
+        run: npm install eslint eslint-import-resolver-typescript eslint-plugin-import
+
       - name: ESlint
         run: npm run lint
 
