--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,13 @@
 name: Publish Release
 
 on:
-  push:
+  pull_request:
     branches:
       - main
 
 jobs:
   build:
-    if: github.event.pull_request.merged == 'true'
+    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
     runs-on: ${{ matrix.os }}
 
     strategy:
