--- a/.github/workflows/preReleaseCheck.yml
+++ b/.github/workflows/preReleaseCheck.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     types: [opened, reopened]
     branches:
-      - dev
+      - main
 
 jobs:
   build:
@@ -21,6 +21,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+
+      - name: Install Dependency
+        run: npm install eslint eslint-import-resolver-typescript eslint-plugin-import fs
 
       - name: ESlint
         run: npm run lint
