--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macOS-latest, windows-latest]
+        os: [macos-14, windows-latest]
         node-version: [16.x]
 
     steps:
